2007-11-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/subtitle-microdvd.sub:
	* tests/subtitle-mpsub.sub:
	Add MicroDVD and MPSub subtitle formats

2007-11-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add SAMI subtitle files, as per:
	http://msdn2.microsoft.com/en-us/library/ms971327.aspx
	* tests/: add test copied from the Microsoft website

2007-11-21  Bastien Nocera  <hadess@hadess.net>

	* README: Update bug reporting instructions

2007-11-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.asc as a glob for PGP armoured keys,
	patch from Adam Schreiber <sadam@clemson.edu> (Closes: #11680)

2007-11-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Up the magic priority of the RSS mime-type
	to avoid them being detected as plain XML files

2007-10-30  Benjamin Otte  <otte@gnome.org>

	* freedesktop.org.xml.in: Add magic for detecting compressed Flash,
	add Futuresplash as an alias for Flash

2007-10-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.aac as a possible pattern for audio
	MPEG-4 files

2007-10-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add OPML with the mime-type text/x-opml+xml,
	and the more official text/x-opml as an alias. Up its magic priority,
	and that of the Atom mime-type as well, to avoid them being detected
	as plain XML files
	* tests/: add an OPML feed to the suite

2007-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Revert associating *.htm and *.html to 
	mozilla bookmarks as the mime systems don't look at magic yet to
	choose the right mime type (Helps: #11843)
	* tests/: add another feed for testing

2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Also add *.jpf as a glob for image/jpx

2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add image/jpx and associated