@@ -54,6 +54,8 @@ subtitle.smi application/x-sami x
 subtitle-microdvd.sub text/x-microdvd x
 # Copied from http://www1.mplayerhq.hu/MPlayer/samples/sub/manyfmts/FOVH%20MoviePlayer.sub
 subtitle-mpsub.sub text/x-mpsub x
+# Copied from http://en.wikipedia.org/wiki/SubStation_Alpha
+subtitle.ssa text/x-ssa
 
 # text
 text-iso8859-15.txt text/plain ox
