@@ -2,6 +2,13 @@
 
 	* freedesktop.org.xml.in:
 	* tests/list:
+	* tests/subtitle.ssa:
+	Add the SSA subtitle format
+
+2007-11-29  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/list:
 	* tests/subtitle-microdvd.sub:
 	* tests/subtitle-mpsub.sub:
 	Add MicroDVD and MPSub subtitle formats
